2000-12-23  Gerd Moellmann  <gerd@gnu.org>

	* progmodes/compile.el (compilation-forget-errors): Fix indentation.

2000-12-22  Stefan Monnier  <monnier@cs.yale.edu>

	* smerge-mode.el (smerge-basic-map): Use `=' rather than `d'.
	Use minibuffer menu prompt for the `=' prefix.
	(smerge-command-prefix): Change default to C-^.
	(smerge-mode): Don't assume font-lock doesn't move point.

	* skeleton.el (skeleton-internal-1): Make sure the first line of
	the region is also re-indented.
	(skeleton-end-newline): New var.
	(skeleton-end-hook): Use it.

2000-12-22  Markus Rost  <markus.rost@mathematik.uni-regensburg.de>

	* comint.el (comint-password-prompt-regexp): Support CVS.

2000-12-22  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (delete-key-deletes-forward-mode): Simplify.  Also
	backspace key combinations, depending on
	delete-key-deletes-forward.

	* bindings.el ([C-backspace]): Bind C-backspace to kill-word.

	* simple.el (delete-key-deletes-forward): Doc fix.

2000-08-22  Emmanuel Briot  <briot@gnat.com>

	* xml.el (top level comment): Updated to reflect the fact that
	white spaces are relevant in the XML file.
	(xml-parse-file): Do not kill an existing Emacs buffer if the file
	to parse was already edited. This allows for on-the-fly analysis
	of XML files.
	(xml-parse-tag): Check that the casing is the same in the start
	tag and end tag, since XML is case-sensitive.  Allows for spaces
	in the end tag, after the name of the tag.
	(xml-parse-attlist): Allow for the character '-' in the name of
	attributes, as in the standard http-equiv attribute Do not save
	the properties in the XML tree, since they are not relevant.

2000-12-21  Stefan Monnier  <monnier@cs.yale.edu>

	* generic.el (generic-read-type): Undo last change, inline into
	`generic-mode' and then remove.
	(generic-mode): Inline generic-read-type.
	(define-generic-mode): Push the symbol name rather than the symbol
	onto generic-mode-list.

2000-12-21  Gerd Moellmann  <gerd@gnu.org>
