@@ -4,7 +4,7 @@
 
 ;; Author: Stefan Monnier <monnier@cs.yale.edu>
 ;; Keywords: merge diff3 cvs conflict
-;; Revision: $Id: smerge-mode.el,v 1.8 2000/12/22 22:58:57 monnier Exp $
+;; Revision: $Id: smerge-mode.el,v 1.9 2000/12/22 23:16:22 monnier Exp $
 
 ;; This file is part of GNU Emacs.
 
@@ -477,42 +477,4 @@ The point is moved to the end of the conflict."
 
 
 (provide 'smerge-mode)
-
-;;; Change Log:
-;; $Log: smerge-mode.el,v $
-;; Revision 1.8  2000/12/22 22:58:57  monnier
-;; (smerge-basic-map): Use `=' rather than `d'.
-;; Use minibuffer menu prompt for the `=' prefix.
-;; (smerge-command-prefix): Change default to C-^.
-;;
-;; Revision 1.7  2000/10/06 16:07:31  monnier
-;; (smerge-diff): Setup the buffer's default-directory
-;; and add filename to the names so that diff-mode can jump to source.
-;;
-;; Revision 1.6  2000/10/05 06:05:51  miles
-;; (smerge-mine-face, smerge-other-face, smerge-base-face, smerge-markers-face):
-;;   Add dark-background variants.
-;;
-;; Revision 1.5  2000/08/16 19:51:55  monnier
-;; (smerge-mode-menu): Doc fix.
-;;
-;; Revision 1.4  2000/07/21 13:52:19  fx
-;; (smerge-mode-menu): Fill it out.
-;;
-;; Revision 1.3  2000/05/25 18:08:26  fx
-;; (smerge-diff-switches): Don't use list* in defcustom.
-;;
-;; Revision 1.2  2000/03/22 00:54:55  monnier
-;; (smerge-auto-leave): New function and variable.
-;; (smerge-basic-map): Rename from smerge-basic-keymap.
-;; Change the bindings for smerge-diff-*.
-;; (smerge-*-map): Use easy-mmode-defmap.
-;; (smerge-(next|prev)): Use easy-mmode-define-navigation.
-;; (smerge-keep-*): Use smerge-auto-leave.
-;;
-;; Revision 1.1  1999/12/09 13:00:21  monnier
-;; New file.  Provides a simple minor-mode for files containing
-;; diff3-style conflict markers, such as generated by RCS
-;;
-
 ;;; smerge-mode.el ends here
